FIxed CSS, canvas overflow

--- a/src/styles/Three.module.sass
+++ b/src/styles/Three.module.sass
@@ -4,3 +4,4 @@
   left: 0
   min-height: 100vh
   min-width: 100vh
+  overflow: hidden
