--- a/src/styles/footer.module.sass
+++ b/src/styles/footer.module.sass
@@ -3,5 +3,9 @@
   place-content: center
   display: grid
 
+.footerGrid
+  svg
+    padding: 7px
+
 
 
