--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -9,7 +9,6 @@ body
   position: relative
   min-height: 100%
   min-width: 100%
-  overflow: hidden
 
 form
   display: inline-flex
